--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,2 +1,91 @@
-@import 'reset';
-@import 'grid'
+@import 'normalize.css';
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+
+#main {
+  
+}
+
+.row {
+  width: 100%;
+  margin: 2em auto;
+}
+
+.row {
+  -moz-column-count:1;
+  -moz-column-gap: 0;
+  -moz-column-width: 96%;
+  -webkit-column-count:1;
+  -webkit-column-gap: 0;
+  -webkit-column-width: 96%;
+  column-count: 1;
+  column-gap: 0;
+  column-width: 96%;
+}
+
+
+.photo-box {
+  margin: 0;
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid;
+
+  .content {
+    border: 1px solid #000;
+    margin: 0 0.2em 0.2em;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  figcaption {
+    width: 100%;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      display: inline-block;
+    }
+  }
+}
+
+
+@media screen and (min-width: 900px) {
+  .row {
+    -moz-column-count:2;
+    -moz-column-gap: 2%;
+    -moz-column-width: 48%;
+    -webkit-column-count:2;
+    -webkit-column-gap: 2%;
+    -webkit-column-width: 48%;
+    column-count: 2;
+    column-gap: 2%;
+    column-width: 48%;
+  }
+}
+
+@media screen and (min-width: 1250px) {
+  .row {
+    -moz-column-count:3;
+    -moz-column-gap: 3%;
+    -moz-column-width: 30%;
+    -webkit-column-count:3;
+    -webkit-column-gap: 3%;
+    -webkit-column-width: 30%;
+    column-count: 3;
+    column-gap: 3%;
+    column-width: 30%;
+  }
+}
+
