--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -2,7 +2,7 @@
 
 html {
   box-sizing: border-box;
-  font-size: 1em;
+  font-size: 62.5%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -10,37 +10,106 @@ html {
 
 body {
   background-color: white;
-  font-family: 'Helvetica Neue', 'Arial', serif;
   font-weight: 400;
   line-height: 1.45;
-  color: #333;
+  height: 100%;
+  max-height: 100%;
+  font-family: 'Droid Serif', serif;
+  font-size: 2.0rem;
+  line-height: 1.6em;
+  color: #3A4145;
 }
 
-p {
-  margin-bottom: 1.3em;
-}
-
-h1, h2, h3, h4 {
-  margin: 1.414em 0 0.5em;
-  font-weight: inherit;
-  line-height: 1.2;
+h1, h2, h3,
+h4, h5, h6 {
+    text-rendering: optimizeLegibility;
+    line-height: 1;
+    margin-top: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
-  margin-top: 0;
-  font-size: 3.157em;
+    font-size: 5rem;
+    line-height: 1.2em;
+    letter-spacing: -2px;
+    text-indent: -3px;
 }
 
-h2 {font-size: 2.369em;}
+h2 {
+    font-size: 4rem;
+    line-height: 1.2em;
+    letter-spacing: -1px;
+    text-indent: -2px;
+}
 
-h3 {font-size: 1.777em;}
+h3 {
+    font-size: 3.5rem;
+}
 
-h4 {font-size: 1.333em;}
+h4 {
+    font-size: 3rem;
+}
 
-small, .font_small {font-size: 0.75em;}
+h5 {
+    font-size: 2.5rem;
+}
 
-#main {
-  
+h6 {
+    font-size: 2rem;
+}
+
+a {
+  color: #4a4a4a;
+  transition: color ease 0.3s;
+
+  &:hover {
+    color: #57A3E8;
+  }
+}
+
+h1 a, h2 a, h3 a,
+h4 a, h5 a, h6 a {
+    color: #50585D;
+}
+
+
+p, ul, ol {
+    margin: 1.6em 0;
+}
+
+ol ol, ul ul,
+ul ol, ol ul {
+    margin: 0.4em 0;
+}
+
+.title {
+  text-align: center;
+  margin: 0.67em 0;
+
+  a {
+    text-decoration: none;
+  }
+
+  .tag {
+    &:hover {
+
+    }
+  }
+}
+
+.refresh {
+  text-align: center;
+
+  a {
+    color: #FFF;
+    text-decoration: none;
+    padding: 0.3em;
+    background-color: #AA6439;
+
+    &:hover {
+      background-color: #57A3E8;
+    }
+  }
 }
 
 .row {
@@ -66,6 +135,17 @@ small, .font_small {font-size: 0.75em;}
 
   .content {
     margin: 0 0.2em 0.2em;
+    overflow: hidden;
+
+
+    h2 {
+      margin: 0;
+      font-size: 1.369em;
+    }
+
+    p {
+      font-size: 1em; 
+    }
   }
 
   img {
@@ -78,7 +158,12 @@ small, .font_small {font-size: 0.75em;}
 
   a {
     text-decoration: none;
+    border-bottom: 1px dotted gray;
     color: #000;
+
+    &:hover {
+      color: #57A3E8;
+    }
   }
 
   ul {
@@ -87,18 +172,28 @@ small, .font_small {font-size: 0.75em;}
     margin: 0;
 
     li {
-      display: inline-block;
-      margin: 0.1em;
-      padding: 0.3em;
-      background-color: #92adce;
+      &:hover {
+        background-color: #57A3E8;
+      }
 
       a {
         color: #FFF;
+
+        &:hover {
+          color: #FFF;
+        }
       }
     }
   }
 }
 
+.tag {
+  color: #FFF;
+  display: inline-block;
+  margin: 0.1em;
+  padding: 0.3em;
+  background-color: #92adce;
+}
 
 @media screen and (min-width: 500px) {
   .row {
