--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -91,6 +91,8 @@ ul ol, ol ul {
   }
 
   .tag {
+    padding: 0 0.3em;
+
     &:hover {
 
     }
@@ -177,6 +179,8 @@ ul ol, ol ul {
       }
 
       a {
+        display: inline-block;
+        padding: 0 0.3em;
         color: #FFF;
 
         &:hover {
@@ -191,7 +195,6 @@ ul ol, ol ul {
   color: #FFF;
   display: inline-block;
   margin: 0.1em;
-  padding: 0.3em;
   background-color: #92adce;
 }
 
